--- a/src/main/webapp/errorpage.html
+++ b/src/main/webapp/errorpage.html
@@ -5,7 +5,7 @@
 		<title>Error</title>
 	</head>
 	<body>
-		<a href="/vergelijkNL">Sorry, er is iets verkeerd gegaan. Klik hier om terug te gaan.</a>
+		<a href="/">Sorry, er is iets verkeerd gegaan. Klik hier om terug te gaan.</a>
 	</body>
 	
 </html>
