--- a/src/main/webapp/register.html
+++ b/src/main/webapp/register.html
@@ -11,7 +11,7 @@
 		<h1 class="title" style="position:absolute; top: 10%; left: 45.5%;">Nieuw Account</h1>
 		<form id="registerForm">
 			<div style="position:absolute; left: 40%; top: 20%; width: 26%;">
-				<input id="usernameInput" class="input" type="text" name="username" placeholder="Username" style="margin-bottom: 2%;">
+				<input id="usernameInput" class="input" type="text" name="username" placeholder="Gebruikersnaam" style="margin-bottom: 2%;">
 				<p id="usernameInputP" class="help"></p>
 				<input id="passwordInput" class="input" type="text" name="password" placeholder="Wachtwoord" style="margin-bottom: 2%;">
 				<p id="passwordInputP" class="help"></p>
