--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta charset="ISO-8859-1">
+		<meta charset="UTF-8">
 		<title>Login</title>
 	</head>
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.4.2/css/bulma.min.css">
@@ -18,6 +18,7 @@
 			</div>
 		</form>
 		<button class="button is-danger" id="loginButton" style="position: absolute; left: 50%; top: 35%;" disabled>Login</button>
+		<button class="button" onclick="window.location.href = '/recovery.html'"style="position: absolute; left: 46%; top: 41%;">Wachtwoord Vergeten</button>
 	</body>
 	<script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
 	<script>
