Meer dingen naar nederlands

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -14,7 +14,7 @@
 			  		<div class="field is-grouped">
 					    <button id="favorietenKnop" class="button is-primary" onclick="window.location.href = '/favorieten.html'" style="margin-right: 3%;">Favorieten</button>
 					    <button id="loginKnop" class="button is-primary" onclick="window.location.href = '/login.html'" style="margin-right: 3%;">Login</button>
-					    <button id="registerKnop" class="button is-primary" onclick="window.location.href = '/register.html'" style="margin-right: 3%;">Register</button>
+					    <button id="registerKnop" class="button is-primary" onclick="window.location.href = '/register.html'" style="margin-right: 3%;">Registreer</button>
 					    <button id="logoutKnop" class="button is-primary" onclick="logOut()" style="margin-right: 3%;">Log Uit</button>
 					</div>
 				</div>
