--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -99,6 +99,7 @@
 		});
 		
 		$("#loginButton").click(function(){
+			$("#loginButton").attr("class", "button is-success is-loading");
 			$.ajax({
 			    type: "POST",
 				url: "restservices/authentication/",
@@ -113,6 +114,7 @@
 			    	$("#passwordInput").attr("class", "input is-danger");
 			    	$("#usernameInputP").text("Gebruikersnaam of Wachtwoord is verkeerd");
 			    	$("#usernameInputP").show();
+			    	$("#loginButton").attr("class", "button is-danger");
 			    }
 			})
 		})
