--- a/src/main/webapp/recovery.html
+++ b/src/main/webapp/recovery.html
@@ -98,6 +98,7 @@
     		    						"</div>");
         		    	$('#closeButton').click(function(){
         		    		$("#popup").remove();
+        		    		window.history.back();
         		    	})
 		    		}
 			    },
